--- a/frontend/src/components/StockSearch/StockSearch.module.css
+++ b/frontend/src/components/StockSearch/StockSearch.module.css
@@ -1,8 +1,21 @@
 .wrapper {
     font-family: 'Montserrat', sans-serif;
-    width: 50vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .form {
     font-family: 'Montserrat', sans-serif;
+    width: 50rem;
+}
+
+.jumbo {
+    width: 50rem;
+}
+
+.innerDiv {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
