--- a/frontend/src/components/NotFound.module.css
+++ b/frontend/src/components/NotFound.module.css
@@ -1,13 +1,15 @@
 .wrapper {
-    background-color: white;
-    background-image: url("../assets/img/not-found.jpg");
+    background-color: black;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url("../assets/img/not-found.jpg");
     background-size: contain;
     background-size: cover;
     width: 100%;
     height: 100vh;
+    z-index: -1;
 
     display: flex;
     justify-content: center;
+    color: white;
 }
 
 .content {
@@ -19,7 +21,6 @@
     padding-top: 200px;
     padding-left: 100px;
     padding-right: 100px;
-    color: white;
     font-size: 50pt;
 
     display: flex;
@@ -27,12 +28,19 @@
     justify-content: center;
 }
 
-.searchBar {
-    padding-top: 200px;
+.searchBarText {
+    padding-top: 20px;
     padding-left: 100px;
     padding-right: 100px;
-    color: white;
-    font-size: 50pt;
+    font-size: 30pt;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.searchBar {
+    padding-top: 40px;
 
     display: flex;
     flex-direction: row;
