Added the routing for the account page

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -8,8 +8,9 @@
 }
 .bodyDiv {
   padding-top: 75px;
-  padding-right: 10px;
+  /*padding-right: 10px;
   padding-left: 10px;
+  */ 
 }
 
 .navContainer {
