--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -18,6 +18,7 @@
 }
 
 .searchButton:hover {
+    opacity: 100%;
     background-color: #34c7599f;
     border: none;
 }
@@ -29,13 +30,10 @@
 .toggleButton {
     background-color: #34c759;
     border: none;
-    outline: none !important;
-    outline-offset: none !important;
 }
 
 .toggleButton:hover {
     background-color: #34c7599f;
+    opacity: 100%;
     border: none;
-    outline: none !important;
-    outline-offset: none !important;
 }
