Added example transition to 404 page

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -14,13 +14,15 @@
 }
 
 .darkMode {
+  transition: 0.3s;
   font-family: "Montserrat", sans-serif;
   color: white;
-  background: black;
+  background: #121212;
   height: 100vh;
 }
 
 .lightMode {
+  transition: 0.3s;
   font-family: "Montserrat", sans-serif;
   color: black;
   background: white;
