--- a/frontend/src/components/NotFound.module.css
+++ b/frontend/src/components/NotFound.module.css
@@ -1,4 +1,5 @@
-.wrapper {
+.lightWrapper {
+    transition: 0.3s;
     background-color: black;
     background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url("../assets/img/not-found.jpg");
     background-size: contain;
@@ -10,6 +11,21 @@
     display: flex;
     justify-content: center;
     color: white;
+}
+
+.darkWrapper {
+    transition: 0.3s;
+    background-color: black;
+    background-image: linear-gradient( rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6) ), url("../assets/img/not-found.jpg");
+    background-size: contain;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+
+    display: flex;
+    justify-content: center;
+    color: black;
 }
 
 .content {
