Dark Mode for account page

--- a/frontend/src/components/AccountPage.module.css
+++ b/frontend/src/components/AccountPage.module.css
@@ -1,7 +1,11 @@
-.card,
-.card-default {
-    background-color: black;
+.wrapper {
+  display: flex;
+  justify-content: center;
 }
-.carddiv {
-    padding-bottom: 20px;
+.inner {
+  width: 50rem;
+}
+.cardDark {
+}
+.cardLight {
 }
