--- a/frontend/src/components/CreateBudget.module.css
+++ b/frontend/src/components/CreateBudget.module.css
@@ -1,6 +1,13 @@
-.wrapper {
+.wrapperDark {
   display: flex;
   justify-content: center;
+  background-color: #121212;
+  transition: 0.3s;
+}
+.wrapperLight {
+  display: flex;
+  justify-content: center;
+  transition: 0.3s;
 }
 .inner {
   width: 50rem;
