Dark Mode for Register Accountt

--- a/frontend/src/components/LoginPage.module.css
+++ b/frontend/src/components/LoginPage.module.css
@@ -1,6 +1,12 @@
-.wrapper {
+.wrapperDark {
   display: flex;
   justify-content: center;
+  background-color: #121212;
+}
+.wrapperLight {
+  display: flex;
+  justify-content: center;
+  background-color: white;
 }
 .inner {
   width: 50rem;
