--- a/frontend/src/components/StockInfo.module.css
+++ b/frontend/src/components/StockInfo.module.css
@@ -44,6 +44,11 @@
   margin-left: 20px;
 }
 
+.followButton {
+  margin-right: 10px;
+  width: 40px;
+}
+
 .title {
   font-size: 30pt;
   font-weight: bold;
