Created route to spending summary and handled errors

--- a/frontend/src/components/SpentSummary.module.css
+++ b/frontend/src/components/SpentSummary.module.css
@@ -53,3 +53,15 @@
   margin-left: 10px;
   width: 40%;
 }
+
+.jumboOuter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.jumboInner {
+  margin-top: 20px;
+  width: 70vw;
+}
