--- a/frontend/src/components/CreateBudget/CreateBudget.module.css
+++ b/frontend/src/components/CreateBudget/CreateBudget.module.css
@@ -1,6 +1,6 @@
 .wrapperDark {
   display: flex;
-  justify-content: center;
+  /*justify-content: center;*/
   background-color: #121212;
   transition: 0.3s;
 }
@@ -10,5 +10,5 @@
   transition: 0.3s;
 }
 .inner {
-  width: 50rem;
+  /*width: 50rem;*/
 }
