refactored files and made home page mobile friendly

--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -1,13 +1,14 @@
 .container {
   height: 100vh;
   background-image: linear-gradient(black, black),
-    url("../assets/img/home-background.jpg");
+    url("../../assets/img/home-background.jpg");
   background-blend-mode: saturation;
 }
 
 .logo {
   display: inline-block;
   height: 200px;
+  object-fit: scale-down;
 }
 
 .cont {
