--- a/frontend/src/components/StockInfo/StockInfo.module.css
+++ b/frontend/src/components/StockInfo/StockInfo.module.css
@@ -90,3 +90,13 @@
 .followedStockButton {
   margin-left: 20px;
 }
+
+.buySellDiv {
+  display: flex;
+  flex-direction: row;
+  margin-top: 11px;
+}
+
+.buySellField {
+  margin-right: 10px;
+}
