--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,74 +1,22 @@
 .wrapper {
-    display: flex;
-    flex-direction: row;
-    font-family: "Montserrat", sans-serif;
-    width: 50rem;
+  display: flex;
+  flex-direction: row;
+  font-family: "Montserrat", sans-serif;
+  width: 50rem;
 }
 
 .bar {
-    width: 30rem;
-    padding-right: 1rem;
-    border-color: white;
-    padding-left: 1rem;
+  width: 30rem;
+  padding-right: 1rem;
+  border-color: white;
+  padding-left: 1rem;
 }
 
-.searchButtonDark {
-    color: white !important;
-    width: 9rem;
-    background-color: #34c759;
-}
-
-.searchButtonDark:hover {
-    color: white !important;
-    opacity: 100%;
-    background-color: #34c7599f;
-    border: none;
-}
-
-.searchButtonLight {
-    color: black !important;
-    width: 9rem;
-    background-color: #34c759;
-}
-
-.searchButtonLight:hover {
-    color: black !important;
-    opacity: 100%;
-    background-color: #34c7599f;
-    border: none;
+.searchButton {
+  width: 9rem;
 }
 
 .toggle {
-    width: 9rem;
-}
-
-.toggleButtonDark {
-    color: white;
-    background-color: #34c759;
-    border: none;
-}
-
-.toggleButtonDark:hover {
-    color: white;
-    background-color: #34c7599f;
-    opacity: 100%;
-    border: none;
-}
-
-.toggleButtonLight {
-    color: black !important;
-    background-color: #34c759;
-    border: none;
-}
-
-.toggleButtonLight:hover {
-    color: black !important;
-    background-color: #34c7599f;
-    opacity: 100%;
-    border: none;
-}
-
-.toggleButtonLight:active {
-    color: black !important;
-    
+  width: 9rem;
+  margin-right: 10px;
 }
