--- a/frontend/src/components/StocksPage/StocksPage.module.css
+++ b/frontend/src/components/StocksPage/StocksPage.module.css
@@ -8,7 +8,15 @@
 
 .wrapper {
   margin-top: 20px;
-  margin-left: 40px;
+  padding-left: 40px;
+  height: 100%;
+}
+
+.wrapperDark {
+  margin-top: 20px;
+  padding-left: 40px;
+  height: 100%;
+  background: #121212;
 }
 
 .investmentDiv {
@@ -50,4 +58,8 @@ h3 {
 .netChange {
   display: flex;
   flex-direction: row;
+}
+
+.alertDiv {
+  margin-right: 20px;
 }
