--- a/frontend/src/components/CreateBudget/CreateBudget.module.css
+++ b/frontend/src/components/CreateBudget/CreateBudget.module.css
@@ -1,60 +1,23 @@
 .wrapperDark {
-  display: flex;
-  /*justify-content: center;*/
   background-color: #121212;
+  display: flex;
   transition: 0.3s;
-  position: absolute;
-  height: 1vh;
 }
 .wrapperLight {
   display: flex;
-  /*justify-content: center;*/
+  justify-content: center;
   transition: 0.3s;
-  position: absolute;
+  position: relative;
 }
 
 .inner {
   width: 50rem;
-}
-
-@media only screen and (max-width: 1600px) {
-  .stackTop {
-    display: none;
-    z-index: 9;
-    position: fixed;
-    top: 50;
-    right: 0;
-    width: 50rem;
-  }
-  .container {
-    position: relative;
-  }
-  .wrapperDark {
-    display: flex;
-    /*justify-content: center;*/
-    background-color: #121212;
-    transition: 0.3s;
-    position: absolute;
-    height: 1vh;
-  }
-  .wrapperLight {
-    display: flex;
-    /*justify-content: center;*/
-    transition: 0.3s;
-    position: absolute;
-  }
-
-  .inner {
-    width: 50rem;
-  }
+  justify-content: center;
 }
 
 .stackTop {
-  z-index: 9;
-  position: fixed;
-  top: 50;
-  right: 20rem;
   width: 30rem;
+  justify-content: center;
 }
 
 .container {
